objects/Product_Image__c.object
<CustomObject>
    <description>Contains image of the product</description>
    <fields>
        <fullName>Hero_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Selected this image will be displayed on the Product List Page</inlineHelpText>
        <label>Hero Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Images</relationshipLabel>
        <relationshipName>Product_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_URL__c</fullName>
        <inlineHelpText>Contains the fully Qualified Path of the image to be shown on the product detail page</inlineHelpText>
        <label>Resource URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Static_Resource__c</fullName>
        <inlineHelpText>Required if Static Resource is Selected in Image Type</inlineHelpText>
        <label>Static Resource</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>The type of
image which
will determine
what to display</inlineHelpText>
        <label>Image Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Static Resource</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>The URL for the image</description>
        <inlineHelpText>The URL for the image</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Product Image</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Product Image Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>